@@ -1,3 +1,3 @@
 test:
-    coverage run run_tests.py
-    coverage report -m
+	coverage run run_tests.py
+	coverage report -m
